tests/NormalTests/paczka2/big_fuzzy/35815525.err
Error in line 2: Rè4 S185 42,1
Error in line 9: MzO80bxh6 A984 24,W
Error in line 4: MzO80bxh6 S185 11,8
Error in line 17: ZRl575hi S497 466,9
Error in line 8: S185 A464 53,6
Error in line 25: MKr A984 32,4
Error in line 29: MKr S185 11,4
Error in line 34: S185 S497 21,1
Error in line 46: ZRl575hi A4v4 278,4
Error in line 48: MzO80bxh6 S185 57,27
Error in line 45: ZRl575hi A464 69,6
Error in line 49: ZRl575hi S185 33,1
Error in line 52: MzO80bxh6 S185 54,2
Error in line 18: RU4 S185 101,4
Error in line 64: RU4 S497 29,5
Error in line 71: XRS7qt A464 41,6
Error in line 84: MzO80bxh6 S497 85,0
Error in line 94: RU4 A984 52,9
Error in line 96: S185 S497 55,6
Error in line 103: MzO80bxh6 A984 89,3
Error in line 101: S185 S185 30,9
Error in line 111: RU4 S185 80,21
Error in line 115: S185 S49* 58,*
Error in line 118: RU4 S185 259,5
Error in line 104: MzO80bxh6 S497 94,4
Error in line 119: S185 A464 28,8
Error in line 145: XRS7qt S497 -4,3
Error in line 146: S185 S497 44,0
Error in line 157: S185 A984 53,7
Error in line 164: S185 S185 97,7
Error in line 167: MzO80bxh6 A984 32,7
Error in line 173: S185 S185 29,6
Error in line 182: S185 A984 18,3
Error in line 180: XRS7qt A464 42,9
Error in line 174: Vs4yeLZ7y0 S185 40,3
Error in line 183: S185 A464 22,1
Error in line 187: XRS7qt S185 15,3
Error in line 200: ZRl575hi S497 27,6
Error in line 210: MKr A464 55,9
Error in line 213: XRS7qt A464 44,5
Error in line 204: RU4 S497 10,7
Error in line 218: Vs4yeLZ7y0 A464 42,1
Error in line 229: Vs4yeLZ7y0 S497 80,3
Error in line 230: Vs4yeLZ7y0 A464 38,4
Error in line 235: Vs4yeLZ7y0 S497 67,3
Error in line 245: S185 S185 77,2
